-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.2
-
None
-
Linux fedora 6.4.15-200.fc38.x86_64 #1 SMP PREEMPT_DYNAMIC Thu Sep 7 00:25:01 UTC 2023 x86_64 GNU/Linux
gcc-Version 13.2.1 20230728 (Red Hat 13.2.1-1) (GCC)
Qt 6.5.2 (x86_64-little_endian-lp64 shared (dynamic) release build; by GCC 10.3.1 20210422 (Red Hat 10.3.1-1)) on "xcb"
OS: Fedora Linux 38 (Thirty Eight) [linux version 6.4.15-200.fc38.x86_64]
Architecture: x86_64; features: SSE2 SSE3 SSSE3 SSE4.1 SSE4.2 AVX AVX2 RDRAND RDSEED AES VAES SHA
Environment:
Features: QT_NO_EXCEPTIONSLinux fedora 6.4.15-200.fc38.x86_64 #1 SMP PREEMPT_DYNAMIC Thu Sep 7 00:25:01 UTC 2023 x86_64 GNU/Linux gcc-Version 13.2.1 20230728 (Red Hat 13.2.1-1) (GCC) Qt 6.5.2 (x86_64-little_endian-lp64 shared (dynamic) release build; by GCC 10.3.1 20210422 (Red Hat 10.3.1-1)) on "xcb" OS: Fedora Linux 38 (Thirty Eight) [linux version 6.4.15-200.fc38.x86_64] Architecture: x86_64; features: SSE2 SSE3 SSSE3 SSE4.1 SSE4.2 AVX AVX2 RDRAND RDSEED AES VAES SHA Environment: Features: QT_NO_EXCEPTIONS
-
-
0f0371c83 (dev), f2d4c19b2 (6.6), 93233516957f71054c42ba843cdd57216834acd7 (6.6.2), d50ba5ff5 (tqtc/lts-6.5), 337072358 (dev), 81e6ede3a (6.8)
Cannot package Qt 6.5 app, due to privately marked dylib
QFutureInterfaceBase::setContinuation(std::function, QFutureInterfaceBasePrivate*)@Qt_6_PRIVATE_API (16)
Desktop_Qt_6_5_2_GCC_64bit
Code Snippets:
QtConcurrent::run(&MainWindow::doQuery, this).then(this, [this] {
dostuffonguithread ...
});
dnf install:
Error:
Problem: cannot install both qt6-qtbase-6.5.2-5.fc38.x86_64 from updates and qt6-qtbase-6.4.3-1.fc38.x86_64 from fedora
package xyz-0.2-1.fc38.x86_64 from @commandline requires libQt6Core.so.6(Qt_6.5)(64bit), but none of the providers can be installed
package xyz-0.2-1.fc38.x86_64 from @commandline requires libQt6Core.so.6(Qt_6_PRIVATE_API)(64bit), but none of the providers can be installed
if compiling against 6.4.3:
dnf install works, installs qt 6.5.2;
on run:
symbol lookup error: xyz: undefined symbol: _ZN20QFutureInterfaceBase15setContinuationESt8functionIFvRKS_EEP27QFutureInterfaceBasePrivate, version Qt_6
- resulted in
-
QTBUG-123429 ABI break between Qt 6.5 LTS and Qt 6.6/6.7
-
- Closed
-